Fix background image and set overflow to scroll.

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -2,7 +2,10 @@
 
 .App {
   text-align: center;
-  height: 100%;
+  height: 100vh;
+  overflow: scroll;
+  background-image: url('../../Assets/deathstar-background.jpg');
+  background-size: cover;
 }
 
 .content-container {
