--- a/src/Components/Crawl/Crawl.scss
+++ b/src/Components/Crawl/Crawl.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 
 .side-bar {
-  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
   height: 400px;
@@ -16,7 +16,6 @@
 }
 
 .crawl-container {
-  background-color: #000000;
   width: 100%;
   height: 100%;
   overflow: hidden;
